-  fixed font sizing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,7 @@ h1 {
 .container h1 {
   font-size: 5rem;
   font-family: 'Montserrat';
+  text-transform: uppercase;
 }
 
 .header_container{
@@ -319,7 +320,7 @@ h1 {
   /* Home */
 
   .home_container {
-    top: 6rem;
+    top: 8rem;
   }
 
   .home_container .home_head_wrapper {
@@ -328,13 +329,13 @@ h1 {
   }
 
   .home_container .home_head_wrapper h1 {
-    font-size: 1.2rem;
+    font-size: 2rem;
   }
 
 
   .home_container .home_head_wrapper p {
     top: 0rem;
-    font-size: 0.7rem;
+    font-size: 1rem;
   }
 
   .home_container .image_container img {
@@ -405,10 +406,10 @@ h1 {
     font-size: 1rem;
   }
   .about_container h1 {
-    font-size: 3rem;
+    font-size: 2rem;
   }
   .about_container .about_contact{
-    top: -11rem;
+    top: -20rem;
   }
 
   /* Contact */
@@ -418,12 +419,12 @@ h1 {
   }
 
   .contact_container h1 {
-    font-size: 4rem;
+    font-size: 2rem;
   }
 
   .contact_container p {
-    font-size: 0.6rem;
-    top: -1rem;
+    /* font-size: 0.6rem;
+    top: -1rem; */
   }
   .contact_container span {
     display: block;
@@ -485,7 +486,7 @@ h1 {
 
   .home_container .home_head_wrapper p {
     top: 0rem;
-    font-size: 0.7rem;
+    font-size: 1rem;
   }
 
   .home_container .image_container img {
